--- a/product/freetrial/element.html
+++ b/product/freetrial/element.html
@@ -179,8 +179,8 @@
         <!--S:link-->
         <section>
             <ul class="step_tab_block mt_0">
-                <li class="tab_link"><a href="./product/freetrial/kinder.html"><span class="name">유치원 무료 체험</span></a></li>
-                <li class="tab_link step2 active"><a href="./product/freetrial/element.html"><span class="name">초등 무료 체험</span></a></li>
+                <li class="tab_link"><a href="./kinder.html"><span class="name">유치원 무료 체험</span></a></li>
+                <li class="tab_link step2 active"><a href="./element.html"><span class="name">초등 무료 체험</span></a></li>
             </ul>
         </section>
         <!--E:link-->
@@ -538,7 +538,7 @@
         <div class="fnb_btm_block">
             <div class="container d_flex m_column_reverse">
                 <div>
-                    <h2 class="f_logo m_d_none"><img src="./../images/f_logo.png" alt="Egg School"></h2>
+                    <h2 class="f_logo m_d_none"><img src="../../images/f_logo.png" alt="Egg School"></h2>
                     <!--pc-->
                     <ul class="fnb_info_block m_d_none d_block">
                         <li class="fnb_info">
