--- a/product/freetrial/kinder.html
+++ b/product/freetrial/kinder.html
@@ -180,8 +180,8 @@
         <section class="step_tab_wrapper">
 
             <ul class="step_tab_block mt_0">
-                <li class="tab_link active"><a href="/product/freetrial/kinder"><span class="name">유치원 무료 체험</span></a></li>
-                <li class="tab_link step2"><a href="/product/freetrial/element"><span class="name">초등 무료 체험</span></a></li>
+                <li class="tab_link active"><a href="./kinder.html"><span class="name">유치원 무료 체험</span></a></li>
+                <li class="tab_link step2"><a href="./element.html"><span class="name">초등 무료 체험</span></a></li>
             </ul>
         </section>
         <!--E:link-->
@@ -262,7 +262,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="./../images/product/freetrial/kinder/img_step_02.png" alt="">
+                                    <img src="./../../images/product/freetrial/kinder/img_step_02.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -280,7 +280,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="./../images/product/freetrial/kinder/img_step_03.png" alt="">
+                                    <img src="./../../images/product/freetrial/kinder/img_step_03.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -313,14 +313,14 @@
                     <ul class="list_block">
                         <li class="process_box" data-aos="fade-up">
                             <div class="thumb_block">
-                                <img src="./../images/product/img_freetrial_kinder.png" alt="">
+                                <img src="./../../images/product/img_freetrial_kinder.png" alt="">
                             </div>
                             <h6 class="title">무료 체험 신청</h6>
                         </li>
                         <li><i class="ico_arrow process"></i></li>
                         <li class="process_box" data-aos="fade-up" data-aos-delay="200">
                             <div class="thumb_block">
-                                <img src="./../images/product/img_freetrial_delivery.png" alt="">
+                                <img src="./../../images/product/img_freetrial_delivery.png" alt="">
                             </div>
                             <h6 class="title">무료 배송</h6>
                             <p class="desc">* 앱 설치 후 영상부터 즐겨보세요.</p>
@@ -329,7 +329,7 @@
                         <li><i class="ico_arrow process"></i></li>
                         <li class="process_box" data-aos="fade-up" data-aos-delay="300">
                             <div class="thumb_block">
-                                <img src="./../images/product/img_freetrial_content.png" alt="">
+                                <img src="./../../images/product/img_freetrial_content.png" alt="">
                             </div>
                             <h6 class="title">콘텐츠 체험</h6>
                         </li>
@@ -557,7 +557,7 @@
         <div class="fnb_btm_block">
             <div class="container d_flex m_column_reverse">
                 <div>
-                    <h2 class="f_logo m_d_none"><img src="../../images/f_logo.png" alt="Egg School"></h2>
+                    <h2 class="f_logo m_d_none"><img src="./../../images/f_logo.png" alt="Egg School"></h2>
                     <!--pc-->
                     <ul class="fnb_info_block m_d_none d_block">
                         <li class="fnb_info">
