--- a/product/library.html
+++ b/product/library.html
@@ -511,8 +511,8 @@
                     </div>
                     <ul class="sns_link_block">
                         <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="./../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
-                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="../../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
-                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="../../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
+                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="./../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
+                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="./../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
                     </ul>
                 </div>
             </div>
