--- a/studyroom/guide/element.html
+++ b/studyroom/guide/element.html
@@ -371,7 +371,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">04</h6>
                         <div class="thumb_block">
-                            <img src="../../../images/guide/element/img_step03_04.png" alt="">
+                            <img src="./../../images/guide/element/img_step03_04.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -411,7 +411,7 @@
         <div class="fnb_btm_block">
             <div class="container d_flex m_column_reverse">
                 <div>
-                    <h2 class="f_logo m_d_none"><img src="../../../images/f_logo.png" alt="Egg School"></h2>
+                    <h2 class="f_logo m_d_none"><img src="./../../images/f_logo.png" alt="Egg School"></h2>
                     <!--pc-->
                     <ul class="fnb_info_block m_d_none d_block">
                         <li class="fnb_info">
@@ -455,9 +455,9 @@
                         </ul>
                     </div>
                     <ul class="sns_link_block">
-                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="../../../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
-                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="../../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
-                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="../../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
+                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="./../../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
+                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="./../../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
+                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="./../../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
                     </ul>
                 </div>
             </div>
