--- a/studyroom/guide/kinder.html
+++ b/studyroom/guide/kinder.html
@@ -293,7 +293,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/kinder/img_step02_02.png" alt="">
+                            <img src="./../../images/guide/kinder/img_step02_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">영상 시청하기</h6>
@@ -306,7 +306,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/kinder/img_step02_03.png" alt="">
+                            <img src="./../../images/guide/kinder/img_step02_03.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">활동자료로 놀기</h6>
@@ -320,7 +320,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">04</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/kinder/img_step02_04.png" alt="">
+                            <img src="./../../images/guide/kinder/img_step02_04.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">에그스쿨 펜 이용하기</h6>
@@ -338,7 +338,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">05</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/kinder/img_step02_05.png" alt="">
+                            <img src="./../../images/guide/kinder/img_step02_05.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">영어 섬취감 키우기 </h6>
@@ -364,7 +364,7 @@
                 <ul>
                     <li class="step_box" data-aos="fade-up">
                         <div class="thumb_block">
-                            <img src="./../images/guide/kinder/img_step03_01.png" alt="">
+                            <img src="./../../images/guide/kinder/img_step03_01.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -376,7 +376,7 @@
                     </li>
                     <li class="step_box" data-aos="fade-up">
                         <div class="thumb_block">
-                            <img src="./../images/guide/kinder/img_step03_02.png" alt="">
+                            <img src="./../../images/guide/kinder/img_step03_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -388,7 +388,7 @@
                     </li>
                     <li class="step_box" data-aos="fade-up">
                         <div class="thumb_block">
-                            <img src="./../images/guide/kinder/img_step03_03.png" alt="">
+                            <img src="./../../images/guide/kinder/img_step03_03.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -425,7 +425,7 @@
         <div class="fnb_btm_block">
             <div class="container d_flex m_column_reverse">
                 <div>
-                    <h2 class="f_logo m_d_none"><img src="./../images/f_logo.png" alt="Egg School"></h2>
+                    <h2 class="f_logo m_d_none"><img src="./../../images/f_logo.png" alt="Egg School"></h2>
                     <!--pc-->
                     <ul class="fnb_info_block m_d_none d_block">
                         <li class="fnb_info">
@@ -469,9 +469,9 @@
                         </ul>
                     </div>
                     <ul class="sns_link_block">
-                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="./../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
-                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="./../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
-                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="./../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
+                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="./../../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
+                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="./../../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
+                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="./../../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
                     </ul>
                 </div>
             </div>
