--- a/studyroom/guide/library.html
+++ b/studyroom/guide/library.html
@@ -274,7 +274,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="../../../images/guide/img_eggschool_app.png" alt="">
+                            <img src="./../../images/guide/img_eggschool_app.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -288,7 +288,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="../../../images/guide/library/img_step02_02.png" alt="">
+                            <img src="./../../images/guide/library/img_step02_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -301,7 +301,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/library/img_step02_03.png" alt="">
+                            <img src="./../../images/guide/library/img_step02_03.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
