--- a/product/freetrial/kinder.html
+++ b/product/freetrial/kinder.html
@@ -133,7 +133,7 @@
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Study Room <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="./../../studyroom/guide.html">학습가이드</a></li>
+                        <li class="lnb_link"><a href="./../../studyroom/guide/kinder.html">학습가이드</a></li>
                         <li class="lnb_link"><a href="./../../studyroom/guide/remotesupport.html">PC원격지원</a></li>
                     </ul>
                 </li>
